--- a/Lab4/src/top-bar/top-bar.component.html
+++ b/Lab4/src/top-bar/top-bar.component.html
@@ -3,7 +3,7 @@
   <h1><img src="../assets/Yin_yang.svg.png" style="width:3rem">Wushu Store</h1>
 </a>
 
-<a class="button fancy-button"><img src="assets/cart.PNG">Checkout</a>
+<a class="button fancy-button" [routerLink]="['/cart']"><img src="assets/cart.PNG">Checkout</a>
 
 <!--
 Copyright Google LLC. All Rights Reserved.
