--- a/Lab4/src/product-list/product-list.component.html
+++ b/Lab4/src/product-list/product-list.component.html
@@ -9,7 +9,7 @@
   <div *ngFor="let product of products; let i = index;">
 
     <h3>
-      <a [title]="product.name + ' details'" [href]="product.link">
+      <a [title]="product.name + ' details'" [routerLink]="['/products', product.id]">
         {{product.name}}
       </a>
     </h3>
@@ -26,6 +26,9 @@
     <p *ngIf="product.description">
       Description: {{ product.description }}
     </p>
+    <h3>
+      <a [href]="product.link">Buy</a>
+    </h3>
     <button type="button" (click)="share(product.link)">
       Share via Telegram
     </button>
