--- a/Lab4/src/styles.css
+++ b/Lab4/src/styles.css
@@ -8,6 +8,41 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body * + * {
+  margin-top : .5rem;
+}
+.previewImg {
+  display: flex;
+  width: 10rem;
+  height: 10rem;
+  padding: 0;
+  justify-content: center;
+}
+
+.previewImg img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+#controls {
+  display: flex;
+  flex-direction: row;
+  margin: 0 5rem 0 5rem;
+}
+
+#controls p {
+  cursor: pointer;
+  padding: 0 .2rem;
+  font-weight: 800;
+  margin : 0;
+}
+
+
 body {
   margin: 0;
 }
