--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,9 +1,9 @@
 
 <a [routerLink]="['/']">
-  <h1><img src="../assets/Yin_yang.svg.png" style="width:3rem">Wushu Store</h1>
+  <h1><img src="../../assets/ui/logo.png" style="width:3rem">Electronics Store</h1>
 </a>
 
-<a class="button fancy-button" [routerLink]="['/cart']"><img src="assets/cart.PNG">Checkout</a>
+<a class="button fancy-button" [routerLink]="['/cart']"><img src="../../assets/ui/cart.PNG">Checkout</a>
 
 <!--
 Copyright Google LLC. All Rights Reserved.
