--- a/src/styles.css
+++ b/src/styles.css
@@ -20,8 +20,9 @@ body * + * {
 }
 
 .previewImg img {
-  max-width: 100%;
-  max-height: 100%;
+  object-fit: contain;
+  width: 100%;
+  height: auto;
 }
 
 #main {
@@ -42,6 +43,21 @@ body * + * {
   margin : 0;
 }
 
+#controls p:hover {
+  color: #BDBDBD;
+}
+
+#back-arrow {
+  display: inline-block;
+  font-weight: 800;
+  font-size: 1.5em;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+#back-arrow:hover {
+  color: #BDBDBD;
+}
 
 body {
   margin: 0;
@@ -78,7 +94,7 @@ p {
 
 a {
   cursor: pointer;
-  color: #d2c019;
+  color: #19d2a1;
   text-decoration: none;
 }
 
@@ -112,30 +128,31 @@ label {
   border-radius: 2px;
   font-size: 14px;
   cursor: pointer;
-  background-color: #d2c019;
+  background-color: #19D2A1FF;
   color: black;
   border: none;
+  margin : 0 .5em;
 }
 
 .button:hover, button:hover {
-  opacity: 0.8;
+  background-color: #caffba;
   font-weight: normal;
 }
 
 .button:disabled, button:disabled {
-  opacity: 0.5;
+  background-color: #6e6e6e;
   cursor: auto;
 }
 
 /* Fancy Button */
 
 .fancy-button {
-  background-color: #BDBDBD;
+  background-color: #ffffff;
   color: black;
 }
 
 .fancy-button i.material-icons {
-  color: #d2c019;
+  color: #19D2A1FF;
   padding-right: 4px;
 }
 
@@ -144,7 +161,7 @@ label {
 app-top-bar {
   width: 100%;
   height: 68px;
-  background-color: #d2c019;
+  background-color: #19D2A1FF;
   padding: 16px;
   display: flex;
   flex-direction: row;
