--- a/Lab6/src/app/album-photos/album-photos.component.html
+++ b/Lab6/src/app/album-photos/album-photos.component.html
@@ -1,1 +1,3 @@
-<p>album-photos works!</p>
+<a routerLink="/albums">&leftarrow;</a>
+<h1>Photo</h1>
+<div *ngIf="currentAlbum"><img src="{{currentAlbum.url}}"></div>
